<resources>
    <string name="app_name">SimpleCalc</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>

    <string name="display_text_view">0</string>

    <string name="ac_button">AC</string>
    <string name="plus_minus_button">±</string>
    <string name="percent_button">%</string>

    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>

    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>

    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>

    <string name="decimal_button">.</string>
    <string name="zero_button">0</string>

    <string name="division_button">÷</string>
    <string name="multiplication_button">×</string>
    <string name="subtraction_button">−</string>
    <string name="addition_button">+</string>
    <string name="equals_button">=</string>

    <string name="theme_title">Theme</string>
    <string name="theme_summary">Change color of theme</string>
    <string name="theme_default">0</string>
    <string-array name="theme_keys">
        <item>Default</item>
        <item>\'Murica</item>
    </string-array>
    <string-array name="theme_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>

    <string name="rate_this_app_title">Rate This App</string>
    <string name="rate_this_app_summary">TBD</string>

    <string name="theme_dialog_title">Theme</string>

    <string name="buy_title">Buy Ad-Free Version</string>
    <string name="buy_summary">TBD</string>
    <string name="buy_dialog_title">Buy Ad-Free Version</string>
    <string name="rate_this_app_dialog_title">About</string>
    <string name="about">THIS SOFTWARE IS PROVIDED AS IS, WITHOUT WARRANTY
                        OF ANY KIND OTHER THAN AS SPECIFICALLY SET FORTH IN THE
                        LICENSE AGREEMENT, INCLUDING WITHOUT LIMITATION WARRANTIES
                        OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
                        NON-INFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
                        HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
                        LIABILITY, WHETHER IN ACTION OF CONTRACT, TORT OR
                        OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
                        SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="menu_about">About</string>
    <string name="menu_past_calculations">Past Calculations</string>
    <string name="title_activity_past_calculations">Past Calculations</string>
    <string name="delete_button">◀</string>
</resources>
